<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="#F9CCC6"
    android:padding="16dp"
    tools:context=".CheckPeriodPayment">

    <EditText
        android:id="@+id/check_startDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Enter your Start Date(dd/mm/yyyy)"
        android:inputType="date"
        android:minWidth="300dp"
        android:minHeight="48dp"
        android:paddingTop="8dp"
        android:labelFor="@id/check_startDate" />

    <EditText
        android:id="@+id/check_endDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Enter your End Date(dd/mm/yyyy)"
        android:inputType="date"
        android:minWidth="300dp"
        android:minHeight="48dp"
        android:paddingTop="8dp"
        android:labelFor="@id/check_endDate" />
    <Button
        android:id="@+id/checkPaymentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_payment"
        android:minWidth="100dp"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/check_resultView"
        android:layout_width="374dp"
        android:layout_height="426dp"
        android:gravity="center"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

</LinearLayout>